# workouter

./: .gitignore  AGENTS.md  LICENSE  README.md
api/: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  Makefile  README.md  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: aef7d233b9f9_initial_migration.py
api/docs/enhancement/: 00-index.md  01-fix-session-filtering.md  02-fix-bodyweight-filtering.md  03-fix-exercise-history-bug.md  04-phase1-integration-testing.md  05-personal-records-system.md  06-exercise-trend-analysis.md  07-exercise-volume-progression.md  08-phase2-integration-testing.md  README.md  phase1-summary.md
api/scripts/: seed_muscle_groups.py
api/src/: export_schema.py
api/src/app/: dependencies.py  main.py  version.py
api/tests/: conftest.py
api/tests/factories/: bodyweight.py  exercise.py  mesocycle.py  routine.py  session.py
api/tests/integration/: test_bodyweight_api.py  test_bodyweight_repository.py  test_exercise_api.py  test_exercise_repository.py  test_granular_edge_cases.py  test_granular_management.py  test_graphql_api.py  test_health.py  test_insight_calculations.py  test_insight_history.py  test_muscle_group_repository.py  test_phase1_integration.py  test_remaining_repositories.py  test_session_api.py  test_session_repository.py  test_volume_insight_muscle_groups.py
api/tests/unit/: test_config_validation.py  test_exercise_mutation.py
cli/: .gitignore  AGENTS.md  DESIGN.md  Dockerfile  Makefile  README.md  pyproject.toml
cli/src/workouter_cli/: __init__.py  main.py  version.py
cli/tests/: __init__.py  conftest.py
cli/tests/integration/: test_backup_commands.py  test_bodyweight_commands.py  test_calendar_commands.py  test_exercise_commands.py  test_insight_commands.py  test_mesocycle_commands.py  test_muscle_groups_commands.py  test_presentation_foundation.py  test_routine_commands.py  test_schema_command.py  test_session_commands.py  test_workout_commands.py
cli/tests/unit/: test_backup_repository.py  test_backup_service.py  test_bodyweight_repository.py  test_bodyweight_service.py  test_calendar_repository.py  test_calendar_service.py  test_config_loader.py  (+16 more)
(+203 files in other folders)
