[project]
name = "workouter"
version = "0.2.0"
description = "Workout Tracker API"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "strawberry-graphql[fastapi]>=0.243",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic[email]>=2.9",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
