[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "workouter-cli"
version = "0.1.4.dev1"
description = "Command-line interface for Workouter API"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
dependencies = [
  "click>=8.1.0",
  "gql[httpx]>=3.5.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "structlog>=24.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "nuitka>=2.7.0",
]

[project.scripts]
workouter-cli = "workouter_cli.main:cli"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "nuitka>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
addopts = "-q --tb=short --disable-warnings --cov=workouter_cli --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
